fix page title vertical alignment

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -18,6 +18,7 @@ header#primary {
       height: 32px;
       margin: 0;
       float: left;
+      line-height: 32px;
       font-size: 1.5rem;
       font-family: "Questrial", "Futura", sans-serif; }
       header#primary nav h1 a:link,
