--- a/styles/scss/sections/_header.scss
+++ b/styles/scss/sections/_header.scss
@@ -16,6 +16,7 @@ header#primary {
       height: 32px;
       margin: 0;
       float: left;
+      line-height: 32px;
       font-size: $font-size-subheader;
       font-family: $font-face-header;
 
